--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://172.31.24.178:9000/</sonar.host.url>
+		<sonar.host.url>http://172.31.21.38:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -97,13 +97,14 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url> http://172.31.17.136:8081/repository/Wefikxam_Release/</url>
+	      <url> http://172.31.16.217:8081/repository/Tesla_Release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://172.31.17.136:8081/repository/Wefikxam_Snapshot/</url>
+	      <url>http://172.31.16.217:8081/repository/Tesla_Snapshot/
+</url>
 	    </snapshotRepository>  
 	    
 	</distributionManagement>
